@@ -129,13 +129,21 @@ test hwloc-topology-cpubind-2.3 "cpu binding, get, bad pid" -setup {
     T destroy
 } -returnCodes error -result {expected integer but got "foo"}
 
-test hwloc-topology-cpubind-2.4 "cpu binding, set, bad option" -setup {
+test hwloc-topology-cpubind-2.4 "cpu binding, get, bad option" -setup {
     hwloc create T
 } -body {
-    T cpubind set -foo
+    T cpubind get -foo
 } -cleanup {
     T destroy
 } -returnCodes error -result {bad flag "-foo": must be -nomembind, -pid, -process, -strict, or -thread}
+
+test hwloc-topology-cpubind-2.5 "cpu binding, get, -pid excludes -thread" -setup {
+    hwloc create T
+} -body {
+    T cpubind get -thread -pid [pid]
+} -cleanup {
+    T destroy
+} -returnCodes error -result {Illegal use of -thread together with -pid}
 
 # - -- --- ----- -------- ------------- ---------------------
 
@@ -171,31 +179,27 @@ test hwloc-topology-cpubind-3.3 "cpu binding, last, bad pid" -setup {
     T destroy
 } -returnCodes error -result {expected integer but got "foo"}
 
-test hwloc-topology-cpubind-3.4 "cpu binding, set, bad option" -setup {
+test hwloc-topology-cpubind-3.4 "cpu binding, last, bad option" -setup {
     hwloc create T
 } -body {
-    T cpubind set -foo
+    T cpubind last -foo
 } -cleanup {
     T destroy
 } -returnCodes error -result {bad flag "-foo": must be -nomembind, -pid, -process, -strict, or -thread}
 
+test hwloc-topology-cpubind-3.5 "cpu binding, last, -pid excludes -thread" -setup {
+    hwloc create T
+} -body {
+    T cpubind last -thread -pid [pid]
+} -cleanup {
+    T destroy
+} -returnCodes error -result {Illegal use of -thread together with -pid}
+
 # - -- --- ----- -------- ------------- ---------------------
+## The real use of binding is more difficult to test.
 
 # # ## ### ##### ######## ############# #####################
 tcltest::cleanupTests
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -203,19 +207,20 @@ puts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 load ./libtclhwloc0.1.so
 hwloc create topo0
 catch {
-    puts "cpubind:[topo0 cpubind get]"
-    puts "cpubind -pid 1 :[topo0 cpubind get -pid 1]"
-    puts "cpubind -pid 1 -type thread :[topo0 cpubind get -pid 1 -type thread]"
-    puts "Setting cpubind to 0"
+    puts "a cpubind:[topo0 cpubind get]"
+    puts "b cpubind -pid 1 :[topo0 cpubind get -pid 1]"
+    puts "c cpubind -pid 1 -thread :[topo0 cpubind get -pid 1 -thread]"
+    puts "d Setting cpubind to 0"
     topo0 cpubind set "0"
-    puts "Setting cpubind to 1"
+    puts "e Setting cpubind to 1"
     topo0 cpubind set -pid [pid] "1"
-    topo0 cpubind set -pid [pid] -type process "1"
-    puts "cpubind:[topo0 cpubind get]"
+    topo0 cpubind set -pid [pid] -process "1"
+    puts "f cpubind:[topo0 cpubind get]"
 
-    puts "Overloading a single core for 20secs"
+    puts "g Overloading a single core for 20secs"
     set running 1
     after 20000 [list set running 0]
     while {$running} { incr a ; update }
-}
+} msg
+puts $msg
 topo0 destroy
