@@ -1,3 +1,4 @@
+# -*- tcl -*-
 puts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 load ./libtclhwloc0.1.so
 if [catch {
